--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
+    "formidable": "^3.5.4",
     "lucide-react": "^0.536.0",
     "next": "^15.4.4",
     "next-sitemap": "^4.2.3",
